# platform_external_gst_liborc

./: Android.mk  configure.ac  orc-0.4.pc.in
orc/: Makefile.am  orcprogram-neon.c
orc-test/: Makefile.am
tools/: Android.mk
